<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Potato Open Sauce Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="shell_dashboard_title">Shell</string>
    <string name="shell_dashboard_summary">Pearl Customization Hub</string>
    <string name="statusbar_main">Statusbar</string>
    <string name="statusbar_main_summary">Change StatusBar Styles</string>
    <string name="appearance_main">Appearance</string>
    <string name="appearance_main_summary">Manage The Appearance</string>
    <string name="buttonandgesture_main">Buttons &amp; Gestures</string>
    <string name="buttonandgesture_main_summary">Navigation keys, gestures</string>
    <string name="notification_main">Notifications</string>
    <string name="notification_main_summary">Control device alerts</string>
    <string name="misc_main">Miscellaneous</string>
    <string name="misc_main_summary">Few More Tweaks</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <!-- Face auto unlock -->
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>

    <!-- Power Menu -->
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>

    <!-- Themes -->
    <string name="accent_color">Accent color</string>
    <string name="base_theme">Base theme color</string>
    <string name="prefer_black_themes">Prefer black themes</string>
    <string name="prefer_black_themes_summary">Use black theme overlays instead of dark ones when possible</string>

    <!-- Heads up -->
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>

    <!-- Heads up timeout -->
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>

    <!-- Heads up snooze -->
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>

    <!-- Battery percentage -->
    <string name="battery_style_category_title">Battery icon</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>

    <!-- Battery light -->
    <string name="battery_light_settings">Battery LED</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>

    <!-- Status bar battery style-->
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>

    <!-- Buttons backlight timeout -->
    <string name="backlight_timeout_title">Buttons backlight timeout</string>
    <string name="backlight_timeout_on">Enabled always</string>
    <string name="backlight_timeout_3s">3 sec</string>
    <string name="backlight_timeout_default">5 sec (default)</string>
    <string name="backlight_timeout_10s">10 sec</string>
    <string name="backlight_timeout_15s">15 sec</string>
    <string name="backlight_timeout_20s">20 sec</string>
    <string name="backlight_timeout_30s">30 sec</string>

    <!-- Enable keys backlight-->
    <string name="button_brightness_title">Backlight</string>
    <string name="button_brightness_sw_title">Enable backlight</string>

    <!-- HW KEYS -->
    <string name="button_backlight_on_touch_only_title">Button touch</string>
    <string name="button_backlight_on_touch_only_summary">Enable backlight with timeout only on button touch</string>

    <!-- HW Keys customization -->
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="hardware_keys_disable_title">Disable keys</string>

    <!-- Navbar -->
    <string name="navbar_visibility">Allow navigation bar</string>

    <!-- Hide the power menu on the lockscreen -->
    <string name="powermenu_lockscreen_title">Lockscreen visibility</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>

    <!-- Navbar tuner -->
    <string name="navbar_tuner_title">Navigation bar settings</string>

    <!-- Statusbar tuner -->
    <string name="statusbar_tuner_title">Status bar icons customization</string>
</resources>
