<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Potato Open Sauce Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/appearance_main">

 <PreferenceCategory>
        <Preference
            android:key="accent_picker"
            android:title="@string/accent_color" />

        <ListPreference
            android:key="base_theme"
            android:title="@string/base_theme" />

        <ListPreference
            android:key="systemui_theme"
            android:title="@string/device_theme"
            android:entries="@array/systemui_theme_entries"
            android:entryValues="@array/systemui_theme_values"
            settings:controller="com.android.settings.display.SystemUiThemePreferenceController" />

        <com.potato.fries.preferences.SystemSettingSwitchPreference
            android:key="prefer_black_themes"
            android:title="@string/prefer_black_themes"
            android:summary="@string/prefer_black_themes_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
